--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="product-image"><img src="https://www.ulefone.com/cdn/shop/files/Armor-X12-Pro-1_1024x1024.jpg?v=1733220000" onerror="this.src='https://fdn2.gsmarena.com/vv/bigpic/ulefone-armor-x12-pro.jpg'" alt="X12 Pro"></div>
+                    <div class="product-image"><img src="https://store.ulefone.com/cdn/shop/products/most_durable_cell_phone_Armor_X12_pro.jpg" onerror="this.src='https://store.ulefone.com/cdn/shop/products/most_durable_cell_phone_Armor_X12_pro.jpg'" alt="X12 Pro"></div>
                     <div class="product-info">
                         <div class="product-title">Armor X12 Pro</div>
                         <div class="product-badge">PALM SIZE</div>
@@ -1363,3 +1363,4 @@
     </script>
 </body>
 </html>
+
